newclay/test/Compiler/Propagation/Fail/IfExpressionDivergentReturns/main.clay
define main;
overload main() =
    if (true)
        true
    else
        0;

